Fixed scrollbar, changed display of properties, and changed classes to extend Space

--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -118,19 +118,8 @@ form div {
 
 .game-display {
     background-color: white;
-    overflow: auto;
-}
-
-@media only screen and (min-width : 768px) {
-    .is-table-row {
-        display: table;
-        width: 100%;
-    }
-    .is-table-row [class*="col-"] {
-        float: none;
-        display: table-cell;
-        vertical-align: top;
-    }
+    height: 300px;
+    overflow-y: auto;
 }
 
 /* Fix Bootstrap */
